--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
   "main": "core.js",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "http-status-codes": "^1.3.0",
     "is-json": "^2.0.1",
     "is-valid-json": "^1.0.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.6",
     "mkdir-recursive": "^0.4.0",
+    "mocha": "^6.2.2",
     "moment": "^2.20.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "socket.io": "1.6.0",
+    "supertest": "^4.0.2",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "./node_modules/.bin/mocha 'test/**/*_test.js'",
+    "test": "./node_modules/.bin/mocha --recursive --exit 'test/**/*-test.js'",
     "core": "nodemon core.js"
   }
 }
